Refactor components and styles for improved layout and functionality; add new Home page and update Footer content.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       })(window.location);
     </script>
   </head>
-  <body>
+  <body translate="no">
     <div id="header1"></div>
-    
     <div id="root"></div>
-   
+    <footer id="footer"></footer>
+
     <script type="module" src="/src/main.jsx"></script>
 
     <script>
@@ -36,7 +36,5 @@
         }
       })();
     </script>
-
   </body>
-  <footer id="footer"></footer>
 </html>
